[metadata]
name = GmoCoin
version = attr: src.VERSION
description = GMO Coin Client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
author = Amashita
url = https://github.com/amashita/GmoCoin

[options]
package_dir=
    =src
packages=find:
python_version == "3.8"
