[metadata]
name = GmoCoin
version = attr: src.__version__
description = GMO Coin Client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
author = Amashita
url = https://github.com/amashita/GmoCoin

[options]
packages=find:
python_version == "3.8"
install_requires=
        requests==2.25.0
        marshmallow==3.9.1
        marshmallow-enum==1.5.1

[options.packages.find]
exclude =
  tests
